Agregando la seccion de capacitacion

--- a/servicios_gisea/recursos_humanos.html
+++ b/servicios_gisea/recursos_humanos.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capacitación IT</title>
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/fontawesome/all.min.css">
-    <link rel="stylesheet" href="./css/aos/aos.css">
-    <link rel="stylesheet" href="/css/glightbox/glightbox.min.css">
-    <link rel="stylesheet" href="/css/swiper/swiper-bundle.min.css">
+    <title>Recursos Humanos</title>
+    <link rel="stylesheet" href="../css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/fontawesome/all.min.css">
+    <link rel="stylesheet" href="../css/aos/aos.css">
+    <link rel="stylesheet" href="../css/glightbox/glightbox.min.css">
+    <link rel="stylesheet" href="../css/swiper/swiper-bundle.min.css">
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -60,7 +60,7 @@
         <nav class="navbar navbar-expand-lg estilos-navbar">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="img/logo_final.png" alt="Gisea" class="gisea-logo">
+                    <img src="../img/logo_final.png" alt="Gisea" class="gisea-logo">
                 </a>
                 <!--MENU DE HAMBURGESA-->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -79,10 +79,10 @@
                 <div class="collapse navbar-collapse estilos-navbar" id="navbarNav">
                     <ul class="navbar-nav estilos-navbar nav-underline">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html" data-translate="navInicio">Inicio</a>
+                            <a class="nav-link" href="../index.html" data-translate="navInicio">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html" data-translate="navSobreNosotros">Sobre Nosotros</a>
+                            <a class="nav-link" href="../about.html" data-translate="navSobreNosotros">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -90,7 +90,7 @@
                                 Servicios
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="service_desarollo_web.html"
+                                <li><a class="dropdown-item" href="../service_desarollo_web.html"
                                         data-translate="dropdownDesarrollo">Desarollo Web</a></li>
                                 <li><a class="dropdown-item" href="recursos_humanos.html" data-translate="dropdownRecursos">Recursos
                                         Humanos</a></li>
@@ -113,23 +113,23 @@
                                 <!--Dropdown btn de idioma-->
                                 <div class="dropdown me-2">
                                     <button id="languageButton" class="btn-cambio-idioma">
-                                        <img src="icons/bandera_mex.png" alt="Idioma" id="languageIcon"
+                                        <img src="../icons/bandera_mex.png" alt="Idioma" id="languageIcon"
                                             style="width: 40px; margin-right: 8px;">
                                         <span id="selectedLanguage">SPA</span>
                                         <i id="dropdownIcon" class="fa-solid fa-angle-down"></i>
                                     </button>
                                     <div id="languageDropdown" class="dropdown-content">
-                                        <a href="#" data-lang="SPA" data-flag="icons/bandera_mex.png">
-                                            <img src="icons/bandera_mex.png" alt="SPA"
+                                        <a href="#" data-lang="SPA" data-flag="../icons/bandera_mex.png">
+                                            <img src="../icons/bandera_mex.png" alt="SPA"
                                                 style="width: 40px; height:40px;">
                                             SPA
                                         </a>
-                                        <a href="#" data-lang="ENG" data-flag="icons/bandera_usa.png">
-                                            <img src="icons/bandera_usa.png" alt="SPA"
+                                        <a href="#" data-lang="ENG" data-flag="../icons/bandera_usa.png">
+                                            <img src="../icons/bandera_usa.png" alt="SPA"
                                                 style="width: 40px; height:40px;">
                                             ENG</a>
-                                        <a href="#" data-lang="JPN" data-flag="icons/bandera_jpn.png">
-                                            <img src="icons/bandera_jpn.png" alt="JPN"
+                                        <a href="#" data-lang="JPN" data-flag="../icons/bandera_jpn.png">
+                                            <img src="../icons/bandera_jpn.png" alt="JPN"
                                                 style="width: 40px; height:40px;">
                                             JPN</a>
                                     </div>
@@ -171,19 +171,19 @@
             </div>
         </nav>
     </header>
-    <!-- HEADER CAPACITACIÓN IT-->
-    <section class="desarrollo-web-header" style="background-image: url('img/header_capacitacion_it.png');">
+    <!-- HEADER RECURSOS HUMANOS-->
+    <section class="desarrollo-web-header" style="background-image: url('../img/header_recursos_humanos.png'); background-position: center -177%;">
         <div class="header-content">
             <div class="text-left">
-                <h1>Capacitacion IT</h1>
+                <h1>Recursos Humanos</h1>
                 <p>Recibe el mejor asesoramiento de profesionales</p>
             </div>
             <div class="text-right">
                 <ul>
-                    <li><i class="fa-solid fa-check"></i><span>Cursos prácticos de programación y desarrollo web</span></li>
-                    <li><i class="fa-solid fa-check"></i><span>Certificaciones reconocidas en la industria IT</span></li>
-                    <li><i class="fa-solid fa-check"></i><span>Metodología práctica con proyectos reales</span></li>
-                    <li><i class="fa-solid fa-check"></i><span>Mentorías personalizadas y seguimiento</span></li>
+                    <li><i class="fa-solid fa-check"></i><span>Consultoría especializada en gestión de talento humano</span></li>
+                    <li><i class="fa-solid fa-check"></i><span>Reclutamiento y selección de personal calificado</span></li>
+                    <li><i class="fa-solid fa-check"></i><span>Capacitación y desarrollo organizacional</span></li>
+                    <li><i class="fa-solid fa-check"></i><span>Evaluación de desempeño y clima laboral</span></li>
                 </ul>
             </div>
         </div>
@@ -196,19 +196,19 @@
                         <i class="fa-solid fa-hard-hat fa-5x"></i>
                     </div>
                     <h2 class="construccion-title">¡Estamos Trabajando en Algo Increíble!</h2>
-                    <p class="construccion-subtitle">Nuestra sección de Capacitación IT está en desarrollo</p>
+                    <p class="construccion-subtitle">Nuestra sección de Recursos Humanos está en desarrollo</p>
                     <div class="construccion-features">
                         <div class="feature-item" data-aos="fade-right" data-aos-delay="100">
-                            <i class="fa-solid fa-code"></i>
-                            <span>Cursos de Programación</span>
+                            <i class="fa-solid fa-users"></i>
+                            <span>Reclutamiento</span>
                         </div>
                         <div class="feature-item" data-aos="fade-up" data-aos-delay="200">
-                            <i class="fa-solid fa-certificate"></i>
-                            <span>Certificaciones</span>
+                            <i class="fa-solid fa-chart-line"></i>
+                            <span>Evaluación de Desempeño</span>
                         </div>
                         <div class="feature-item" data-aos="fade-left" data-aos-delay="300">
-                            <i class="fa-solid fa-users"></i>
-                            <span>Mentorías</span>
+                            <i class="fa-solid fa-graduation-cap"></i>
+                            <span>Capacitación</span>
                         </div>
                     </div>
                     <div class="construccion-progress">
@@ -377,7 +377,7 @@
         <footer class="footer">
             <div class="container-fluid p-0">
                 <div class="footer-top text-center" data-aos="fade-right">
-                    <img src="img/logo_final.png" alt="Logo" class="footer-logo">
+                    <img src="../img/logo_final.png" alt="Logo" class="footer-logo">
                 </div>
                 <div class="footer-bottom d-flex justify-content-between align-items-center">
                     <div class="footer-contact">
@@ -387,8 +387,8 @@
                     </a>
                     </div>
                     <ul class="footer-links">
-                        <li><a href="index.html" data-translate="footerInicio">Inicio</a></li>
-                        <li><a href="about.html" data-translate="footerSobreNosotros">Sobre Nosotros</a></li>
+                        <li><a href="../index.html" data-translate="footerInicio">Inicio</a></li>
+                        <li><a href="../about.html" data-translate="footerSobreNosotros">Sobre Nosotros</a></li>
                         <li><a href="#servicios" data-translate="footerServicios">Servicios</a></li>
                         <li><a href="#clientes" data-translate="footerContacto">Contacto</a></li>
                         <li><a href="#contacto" data-translate="footerCarrers">Carrers</a></li>
@@ -412,17 +412,17 @@
         </footer>
     </section>
 
-    <script src="js/index.js"></script>
-    <script src="js/portafolio.js"></script>
-    <script src="js/aos/aos.js"></script>
-    <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
-    <script src="js/fontawesome/all.min.js"></script>
-    <script src="js/glightbox/glightbox.min.js"></script>
-    <script src="js/imagesloaded/imagesloaded.pkgd.min.js"></script>
-    <script src="js/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="js/waypoints/noframework.waypoints.js"></script>
-    <script src="js/swiper/swiper-bundle.min.js"></script>
-    <script src="js/theme.js"></script>
+    <script src="../js/index.js"></script>
+    <script src="../js/portafolio.js"></script>
+    <script src="../js/aos/aos.js"></script>
+    <script src="../js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../js/fontawesome/all.min.js"></script>
+    <script src="../js/glightbox/glightbox.min.js"></script>
+    <script src="../js/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script src="../js/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../js/waypoints/noframework.waypoints.js"></script>
+    <script src="../js/swiper/swiper-bundle.min.js"></script>
+    <script src="../js/theme.js"></script>
     <script> AOS.init(); </script>
 </body>
 </html>
