--- a/about.html
+++ b/about.html
@@ -49,9 +49,9 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="service_desarollo_web.html"
                                         data-translate="dropdownDesarrollo">Desarollo Web</a></li>
-                                <li><a class="dropdown-item" href="recursos_humanos.html" data-translate="dropdownRecursos">Recursos
+                                <li><a class="dropdown-item" href="servicios_gisea/recursos_humanos.html" data-translate="dropdownRecursos">Recursos
                                         Humanos</a></li>
-                                <li><a class="dropdown-item" href="capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
+                                <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
                                 <li></li>
                             </ul>
