arreglando el problema de el scroll y iconos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/fontawesome/all.min.css">
     <link rel="stylesheet" href="./css/aos/aos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Gisea Agency</title>
 </head>
 <!-- Google tag (gtag.js) -->
@@ -77,7 +80,8 @@
                                         Humanos</a></li>
                                 <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
-                                <li></li>
+                                <li><a class="dropdown-item" href="./servicios_gisea/influencers.html"
+                                        data-translate="dropdownInfluencers">Influencers</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
