--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -99,7 +99,8 @@
                                         Humanos</a></li>
                                 <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
-                                <li></li>
+                                <li><a class="dropdown-item" href="servicios_gisea/influencers.html"
+                                        data-translate="dropdownInfluencers">Influencers</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
