--- a/servicios_gisea/negocios_pequenos.html
+++ b/servicios_gisea/negocios_pequenos.html
@@ -110,7 +110,8 @@
                                 <li><a class="dropdown-item" href="../capacitacion_it.html"
                                         data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
-                                <li></li>
+                                <li><a class="dropdown-item" href="influencers.html"
+                                        data-translate="dropdownInfluencers">Influencers</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
