--- a/about.html
+++ b/about.html
@@ -53,7 +53,8 @@
                                         Humanos</a></li>
                                 <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
-                                <li></li>
+                                <li><a class="dropdown-item" href="influencers.html"
+                                        data-translate="dropdownInfluencers">Influencers</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
