Prueba para rutas que se solucione

--- a/servicios_gisea/influencers.html
+++ b/servicios_gisea/influencers.html
@@ -112,7 +112,7 @@
                                 <!--Dropdown btn de idioma-->
                                 <div class="dropdown me-2">
                                     <button id="languageButton" class="btn-cambio-idioma">
-                                        <img src="../icons/bandera_mex.png" alt="Idioma" id="languageIcon"
+                                        <img src="icons/bandera_mex.png" alt="Idioma" id="languageIcon"
                                             style="width: 40px; margin-right: 8px;">
                                         <span id="selectedLanguage">SPA</span>
                                         <i id="dropdownIcon" class="fa-solid fa-angle-down"></i>
@@ -124,7 +124,7 @@
                                             SPA
                                         </a>
                                         <a href="#" data-lang="ENG" data-flag="../icons/bandera_usa.png">
-                                            <img src="../icons/bandera_usa.png" alt="SPA"
+                                            <img src="../icons/bandera_usa.png" alt="ENG"
                                                 style="width: 40px; height:40px;">
                                             ENG</a>
                                         <a href="#" data-lang="JPN" data-flag="../icons/bandera_jpn.png">
