--- a/servicios_gisea/influencers.html
+++ b/servicios_gisea/influencers.html
@@ -112,7 +112,7 @@
                                 <!--Dropdown btn de idioma-->
                                 <div class="dropdown me-2">
                                     <button id="languageButton" class="btn-cambio-idioma">
-                                        <img src="icons/bandera_mex.png" alt="Idioma" id="languageIcon"
+                                        <img src="../icons/bandera_mex.png" alt="Idioma" id="languageIcon"
                                             style="width: 40px; margin-right: 8px;">
                                         <span id="selectedLanguage">SPA</span>
                                         <i id="dropdownIcon" class="fa-solid fa-angle-down"></i>
