Agregando secciones de empresas informacion

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                                         Humanos</a></li>
                                 <li><a class="dropdown-item" href="servicios_gisea/capacitacion_it.html" data-translate="dropdownCapacitacion">Capacitacion
                                         IT</a></li>
-                                <li><a class="dropdown-item" href="influencers.html"
+                                <li><a class="dropdown-item" href="./servicios_gisea/influencers.html"
                                         data-translate="dropdownInfluencers">Influencers</a></li>
                             </ul>
                         </li>
