--- a/service_desarollo_web.html
+++ b/service_desarollo_web.html
@@ -290,7 +290,7 @@
                             </ul>
                         </div>
                         <div class="btn-centro">
-                            <a href="#" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
+                            <a href="servicios_gisea/empresas_medianas.html" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
                         </div>
                     </div>
                 </div>
@@ -337,7 +337,7 @@
                             </ul>
                         </div>
                         <div class="btn-centro">
-                            <a href="#" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
+                            <a href="servicios_gisea/empresas_grandes_corp.html" class="cta-button" data-translate="packageMoreInfoBtn">Más Información!</a>
                         </div>
                     </div>
                 </div>
