Cambio de texto y Mejora en el Dropdown de idiomas

--- a/index.html
+++ b/index.html
@@ -230,9 +230,7 @@
                 <h1 data-translate="titleSobreNosotros">Sobre Nosotros</h1>
             </div>
             <h3 class="about-alineacion" data-translate="aboutDescription">
-                "Somos una agencia digital internacional con presencia en México y Estados Unidos,
-                contamos con un equipo de miembros expertos en áreas como diseño gráfico, desarrollo de software
-                y desarrollo de medios audiovisuales."
+                Somos una agencia digital internacional con presencia en <strong>México, Estados Unidos, España y Argentina</strong>. Nos especializamos en potenciar tu negocio a través de soluciones de <strong>desarrollo de software, desarrollo web</strong> y la producción de <strong>medios audiovisuales</strong>. Además, contamos con expertos en <strong>Recursos Humanos</strong> para la <strong>capacitación de programadores</strong> y la gestión de <strong>talento de influencers</strong>, garantizando el éxito de tu estrategia digital.
             </h3>
         </div>
     </section>
